integration_tests/src/snapshots/integration_tests__tests__rust_spin_tracing_logs.snap
---
source: src/lib.rs
expression: log_data
---
- trace_id: "[trace_id:len(32)]"
  span_id: "[span_id:len(16)]"
  observed_time_unix_nano: "[timestamp]"
  severity_number: 9
  severity_text: INFO
  body: ~
  attributes: {}
  dropped_attributes_count: 0
  flags: 1
- trace_id: "[trace_id:len(32)]"
  span_id: "[span_id:len(16)]"
  observed_time_unix_nano: "[timestamp]"
  severity_number: 9
  severity_text: INFO
  body: ~
  attributes: {}
  dropped_attributes_count: 0
  flags: 1
- trace_id: "[trace_id:len(32)]"
  span_id: "[span_id:len(16)]"
  observed_time_unix_nano: "[timestamp]"
  severity_number: 9
  severity_text: INFO
  body: "AnyValue { value: Some(StringValue(\"Hello from Rust Tracing!\")) }"
  attributes: {}
  dropped_attributes_count: 0
  flags: 1
